# smirk-backend-core

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  openapi.json
.github/workflows/: ci.yml
migrations/: 20260622000001_initial_schema.sql  20260622000002_login_and_restore.sql  20260625000001_challenges.sql  20260625000002_admin.sql  20260626000001_admin_audit.sql  20260626000002_server_config.sql  20260626000003_erasure.sql  20260630000001_invite_codes.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: admin.rs  auth.rs  capabilities.rs  erasure.rs  health.rs  landing.rs  middleware.rs  mod.rs  nip05.rs  openapi.rs  prices.rs  users.rs  website.rs
src/api/wallet/: btc_ltc.rs  grin.rs  grin_relay.rs  heights.rs  mod.rs  xmr_wow.rs
src/core/: admin_session.rs  invite.rs  mod.rs  pow.rs  restore_pow.rs  secret.rs  session.rs
src/core/crypto/: admin_mac.rs  mod.rs  nip98.rs  pepper.rs  signatures.rs
src/infra/: chains.rs  electrum.rs  mod.rs  prices.rs
src/infra/db/: admin_audit.rs  admin_keys.rs  admin_sessions.rs  audit.rs  challenges.rs  erasure.rs  grin_slatepacks.rs  invite_codes.rs  login_events.rs  mod.rs  restore_attempts.rs  server_config.rs  sessions.rs  user_keys.rs  users.rs
src/infra/grin/: api.rs  mod.rs  secure.rs
src/infra/lws/: client.rs  mod.rs  types.rs
src/models/: db.rs  mod.rs
tests/: .env.example  admin_audit.rs  admin_auth.rs  admin_keys.rs  admin_plane.rs  admin_sessions.rs  auth_flow.rs  capabilities.rs  challenges.rs  db_queries.rs  erasure.rs  invite_codes.rs  landing.rs  prices.rs  rate_limit.rs  server_config.rs  wallet_btc_ltc.rs  wallet_grin.rs  wallet_grin_relay.rs  wallet_xmr_wow.rs
tests/common/: mod.rs
tools/: secret-scan.sh
